# substrate-benchmarks-reviewer

./: Cargo.toml  README.md
src/: file_collector.rs  filescraper.rs  lib.rs  parser.rs  tables.rs
tests/: overview_table.rs  step_table.rs
tests/files/: identity.add_registrar.txt
tests/files/full/: democracy.delegate.txt  staking.bond_extra.txt  treasury.tip_new.txt
tests/files/full_files/: balances.transfer.txt
tests/files/shortened/: balances.transfer.txt  democracy.delegate.txt  identity.add_registrar.txt  treasury.tip_new.txt
tests/files/shortened_files/: staking.bond_extra.txt
tests/files/steps/: balances.set_balance_killing.txt  democracy.propose.txt
