[package]
name = "benchmark-analyser"
version = "0.1.0"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libreviewer"
path = "src/lib.rs"

[[bin]]
name = "bench-reviewer"
path = "src/bin/main.rs"

[dependencies]
failure = "0.1.8"
clap = { version = "2.33.0", features = ["yaml"]}
