[package]
name = "substrate-benchmark-reviewer"
version = "0.1.0"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libreview"
path = "src/lib.rs"

[[bin]]
name = "bench-review"
path = "src/main.rs"

[dependencies]
failure = "0.1.8"
clap = "2.33.0"
prettytable-rs = "0.8.0"
